【】学习结果，点击标题可切换搜索引擎

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity android:name=".TagManageActivity" />
         <activity
             android:name=".StudyResultActivity"
-            android:configChanges="orientation|screenSize" />
+            android:configChanges="orientation|screenSize"
+            android:label="" />
     </application>
 
 </manifest>
