--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
     defaultConfig {
         applicationId "animalize.github.com.quantangshi"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.3.7"
         // dataRev "29"
@@ -40,11 +40,12 @@ dependencies {
     })
     repositories {
         mavenCentral()
+        maven { url "https://maven.google.com" }
     }
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.sothree.slidinguppanel:library:3.3.1'
+    compile 'com.android.support:recyclerview-v7:26.0.2'
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:support-v4:26.0.2'
+    compile 'com.sothree.slidinguppanel:library:3.4.0'
     compile 'co.lujun:androidtagview:1.1.4'
     testCompile 'junit:junit:4.12'
 }
