--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.1'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "animalize.github.com.quantangshi"
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.3.7"
-        // dataRev "29"
+        // dataRev "31"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
     }
@@ -21,14 +21,8 @@ android {
     }
 
     applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            def outputFile = output.outputFile
-            if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                //这里修改apk文件名
-                //def fileName = "demo_${variant.productFlavors[0].name}-${defaultConfig.versionCode}-${defaultConfig.versionName}-${releaseTime() }.apk"
-                def fileName = "QuanTangshi.apk"
-                output.outputFile = new File(outputFile.parent, fileName)
-            }
+        variant.outputs.all {output ->
+            outputFileName = "QuanTangshi.apk"
         }
     }
 }
