--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,14 @@ android {
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
-        versionName "1.3.9"
-        // dataRev "34" T2SRev "1"
+        versionName "1.3.10"
+        // dataRev "35" T2SRev "2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
