修复安卓4.0总是弹出输入法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".UIPoem.OnePoemActivity" />
+        <activity
+            android:name=".UIPoem.OnePoemActivity"
+            android:windowSoftInputMode="stateHidden" />
 
         <activity android:name=".StudyActivity" />
         <activity
