--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,18 +28,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     repositories {
         mavenCentral()
         maven { url "https://maven.google.com" }
     }
-    compile 'com.android.support:recyclerview-v7:27.1.0'
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile 'com.android.support:support-v4:27.1.0'
-    compile 'com.sothree.slidinguppanel:library:3.4.0'
-    compile 'co.lujun:androidtagview:1.1.4'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'co.lujun:androidtagview:1.1.4'
+    testImplementation 'junit:junit:4.12'
 }
