--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Mar 09 21:31:03 CST 2017
-systemProp.http.proxyHost=mirrors.opencas.cn
+
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=80
+android.useAndroidX=true
+android.enableJetifier=true
